@@ -1,4 +1,9 @@
 from 1.2 to >= 1.3
+	* Optional: add new context parameters to tweak the behaviour of the 
+	  application with respect to display of handle links:
+		 - nl.mpi.metadatabrowser.allowHandleDisplay
+		 - nl.mpi.metadatabrowser.adapter.handleResolverUri
+	  (see INSTALL.txt for detailed usage information)
 	* Optional: to override some default strings and locations (logos, welcome
 	  page), follow the instructions under 'Customisation' in INSTALL.txt
 
