@@ -2,6 +2,11 @@ Metadata browser 1.3.0
 	Changes:
 			- view selection for written resources (#4445)
 			- options for customisation (#4525, for details, see INSTALL.txt)
+			- new context parameters (#4625, #4645):
+				* nl.mpi.metadatabrowser.allowHandleDisplay
+				* nl.mpi.metadatabrowser.adapter.handleResolverUri
+					(see INSTALL.txt for usage information)
+			
 
 Metadata browser 1.2.0
 	Changes:
